# fastiot

./: .dockerignore  .gitignore  .readthedocs.yaml  .vimspector.json  DOCUMENTING.md  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  configure.py  install.sh  long_discription.txt  pyproject.toml  requirements-complete.txt  requirements.dev.txt  requirements.txt  setup.py
.run/: FastAPI.run.xml  Template Python.run.xml
deployments/all_samples/: deployment.yaml  dev-overwrite.env
deployments/core/: .env  deployment.yaml  dev-overwrite.env
deployments/core/config_dir/: DashModule.yaml  ObjectStorageService.yaml
deployments/core_services/: .env  deployment.yaml  dev-overwrite.env
deployments/core_services/config_dir/: ObjectStorageService.yaml  log_config.yaml
deployments/fastiot_test_env/: .env  deployment.yaml  docker-compose.yaml
deployments/full/: .env  deployment.yaml
deployments/integration_test/: .env  db.env  deployment.yaml  docker-compose.yaml
deployments/integration_test/config_dir/: DashModule.yaml  ObjectStorageService.yaml  ObjectStorageService_1.yaml  ObjectStorageService_2.yaml  ObjectStorageService_double.yaml  ObjectStorageService_u1.yaml  ObjectStorageService_u2.yaml
deployments/sample/: .env  deployment.yaml  dev-overwrite.env
docs/: Makefile  make_docs.sh  prepare_docs.sh  sphinx-requirements.txt
docs/source/: Services.md  architecture_index.rst  conf.py  fastiot.rst  fastiot_api.rst  index.rst  modules.md  quickstart.rst  services.rst
docs/source/architecture/: 00-architecture-overview.rst  01-architecture-overview.rst  01-quickstart.rst  02-project-structure.rst  03-taxonomy.rst  taxonomy.rst
docs/source/static/: fastiot.css
docs/source/tutorials/: part_1_getting_started.rst  part_2_building_services.rst  part_3_config_management.rst  part_4_specific_topics.rst
requirements/: requirements.all.txt  requirements.compile.txt  requirements.dash.txt  requirements.dev.txt  requirements.docs.txt  requirements.fastapi.txt  requirements.influxdb.txt  requirements.mariadb.txt  requirements.mongodb.txt  requirements.opcua.txt  requirements.postgredb.txt  requirements.redis.txt  requirements.txt
scripts/: fiot  fiotv
src/fastiot/: __init__.py  env.py  logger.py  logging.py  testlib.py
src/fastiot/cli/: __init__.py  build_docker.py  cli_logging.py  constants.py  env.py  external_service_helper.py  fastiot-cli.py  fastiot.cli  fiot.py  helper_fn.py  import_configure.py  infrastructure_service_fn.py  infrastructure_service_helper.py  main.py  typer_app.py  version.py
src/fastiot/core/: __init__.py  app.py  app_annotations.py  broker_connection.py  core_uuid.py  data_models.py  logger.py  serialization.py  service.py  service_annotations.py  subject.py  subject_helper.py  time.py
src/fastiot/db/: __init__.py  influxdb_helper_fn.py  mariadb_helper_fn.py  mariadb_schema_checks.py  mongodb_helper_fn.py  redis_helper.py  time_scale_helper_fn.py
src/fastiot/env/: __init__.py  env.py  env_basic.py  env_broker.py  env_constants.py  env_constants_basic.py  env_constants_db.py  env_influxdb.py  env_mariadb.py  env_mongodb.py  env_redis.py  env_timescaledb.py  helpers.py  model.py
src/fastiot/exceptions/: __init__.py  exceptions.py
src/fastiot/ext/: print.py
src/fastiot/helpers/: RedisHelper.py  Redis_Helper.py  __init__.py  log_config.py  object_helper.py  read_yaml.py  redis_helper.py
src/fastiot/msg/: __init__.py  custom_db_data_type_conversion.py  hist.py  redis.py  thing.py  time_series_msg.py
src/fastiot/testlib/: cli.py  testlib.py
src/fastiot/util/: case_conversions.py  classproperty.py  config_helper.py  csv_reader.py  dict_helper.py  log_config.py  object_helper.py  ports.py  read_yaml.py
src/fastiot_core_services/: __init__.py
src/fastiot_core_services/dash/: __init__.py  dash_module.py  env.py  manifest.yaml  run.py  utils.py
src/fastiot_core_services/machine_monitoring/: __init__.py  env.py  extract_thing_metadata.py  machine_monitoring_module.py  manifest.yaml  run.py
src/fastiot_core_services/nats_logger/: __init__.py  env.py  manifest.yaml  nats_logger_module.py  run.py
src/fastiot_core_services/object_storage/: __init__.py  config_model.py  env.py  manifest.yaml  mongodb_handler.py  object_storage_fn.py  object_storage_helper_fn.py  object_storage_service.py  run.py
src/fastiot_core_services/opc_ua_reader/: __init__.py  env.py  machine_monitoring_module.py  manifest.yaml  run.py
src/fastiot_core_services/time_series/: __init__.py  env.py  manifest.yaml  run.py  time_series_service.py
src/fastiot_sample_services/: __init__.py
src/fastiot_sample_services/Redis_Producer/: __init__.py  redis_producer_module.py  run.py
src/fastiot_sample_services/consumer/: consumer_module.py  main.py  manifest.yaml  run.py
src/fastiot_sample_services/dash/: __init__.py  dash_module.py  env.py  manifest.yaml  run.py  utils.py
src/fastiot_sample_services/fastapi/: __init__.py  env.py  fastapi_module.py  manifest.yaml  model.py  run.py  uvicorn_server.py
src/fastiot_sample_services/opc_ua_server/: __init__.py  env.py  manifest.yaml  opc_ua_server_module.py  run.py
src/fastiot_sample_services/producer/: main.py  manifest.yaml  producer_module.py  run.py  sample_data_source.py
src/fastiot_sample_services/redis_producer/: __init__.py  manifest.yaml  redis_producer_module.py  run.py
src/fastiot_tests/: __init__.py  generated.py  run_tests.py  test_env.py
src/fastiot_tests/basetests/: test_time_series_msg.py
src/fastiot_tests/cli/: service_test.py  test_build_command.py  test_config_cmd.py  test_config_env_parsing.py  test_deployment_command.py  test_deployment_model.py  test_infrastructure_service.py  test_manifest_model.py  test_read_configure.py  test_services.py  test_versioning_via_git.py
src/fastiot_tests/core/: test_loop_decorator.py  test_publish_subscribe.py  test_subject_helper.py  test_things.py
src/fastiot_tests/core_services/: test_nats_logger.py  test_object_storage.py  test_time_series.py
src/fastiot_tests/db/: test_databases.py
src/fastiot_tests/helpers/: test_Redis_Helper.py  (+4 more)
(+121 files in other folders)
